// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag renders correctly 1`] = `
<span
  className=" py-1 px-2 rounded text-sm bg-emerald-800"
>
  <a
    href="/tags/タグ"
  >
    タグ
  </a>
</span>
`;

exports[`Tag without link renders correctly 1`] = `
<span
  className=" py-1 px-2 rounded text-sm bg-emerald-800"
>
  タグ
</span>
`;
